Changes with melon 2.6.2                                          30 Dec 2022
    *) Updated naming convention for functions in event module
    *) Fixed error in configuration module
    *) Supported Docker
    *) Optimized Melang performance
    *) Supported Webassembly

Changes with melon 2.6.1                                          30 Nov 2022
    *) Upgraded trace component
    *) Added function pointer 'update' to configuration item structure
    *) Optimized environment variable settings in lexer and lang component
    *) Updated melang naming convention
    *) Updated internal functions' name in Melang
    *) Fixed bug of lang cache path
    *) Updated docs

Changes with melon 2.6.0                                          22 Nov 2022
    *) Fixed bug of lang pipe send function
    *) Optimized callback function about lang task exit
    *) Optimized string macros
    *) Added trace mode
    *) Fixed bug of lang cache path
    *) Updated Melang naming convention for global name
    *) Updated internal functions name in Melang

Changes with melon 2.5.6                                          20 Nov 2022
    *) Removed no-use macro
    *) Optimized  log component
    *) Optimized melang pipe
    *) Fixed bug of melang pipe
    *) Fixed Kqueue bug
    *) Optimized timer event
    *) Added timer cancellation function

Changes with melon 2.5.5                                          17 Nov 2022
    *) Removed no-use macros
    *) Optimized log component
    *) Updated log docs

Changes with melon 2.5.4                                          14 Nov 2022
    *) Fixed bug of error component
    *) Added functions in C and Melang to send message from c to script
    *) Updated docs

Changes with melon 2.5.3                                          03 Nov 2022
    *) Optimize melang performance
    *) Update import function of melang
    *) update logo
    *) Updated naming conventions of hash, rbtree, queue, stack and fork components