@@ -1,6 +1,10 @@
 ## Doubly linked list
 
+There are two doubly linked list implementations in Melon. We introduce them respectively.
 
+
+
+## The first one implementation
 
 ### Header file
 
@@ -93,3 +97,141 @@ int main(void)
 }
 ```
 
+
+
+## The second one
+
+### Header file
+
+```c
+#include "mln_list.h"
+```
+
+Besides functions and macros, we only need to know that if we want to use the doubly linked list, we have to add a `mln_list_t` member (not a pointer) to the custom structure.
+
+
+
+### Functions/Macros
+
+
+
+#### mln_list_add
+
+```c
+void mln_list_add(mln_list_t *sentinel, mln_list_t *node);
+```
+
+Description: Add the node `node` to the doubly linked list `sentinel`.
+
+Return value: None
+
+
+
+#### mln_list_remove
+
+```c
+void mln_list_remove(mln_list_t *sentinel, mln_list_t *node);
+```
+
+Description: Remove the node `node` from the doubly linked list `sentinel`.
+
+Return value: None
+
+
+
+### mln_list_head
+
+```c
+mln_list_head(sentinel)
+```
+
+Description: Get the first node pointer of the doubly linked list.
+
+Return value: the first node pointer, or `NULL` if there is no
+
+
+
+#### mln_list_tail
+
+```c
+ mln_list_tail(sentinel)
+```
+
+Description: Get the tail node pointer of the doubly linked list.
+
+Return value: the first node pointer, or `NULL` if there is no
+
+
+
+#### mln_list_next
+
+```c
+mln_list_next(node)
+```
+
+Description: Get the next node pointer of the current node `node`.
+
+Return value: pointer to the next node, or `NULL` if none
+
+
+
+#### mln_list_prev
+
+```c
+mln_list_prev(node)
+```
+
+Description: Get the previous node pointer of the current node `node`.
+
+Return value: pointer to the previous node, or `NULL` if none
+
+
+
+#### mln_list_null
+
+```c
+mln_list_null()
+```
+
+Description: Used to initialize the queue.
+
+Return value: None
+
+
+
+### Example
+
+```c
+#include "mln_list.h"
+#include "mln_defs.h"
+#include <stdlib.h>
+
+typedef struct {
+    int        val;
+    mln_list_t node;
+} test_t;
+
+int main(void)
+{
+    int i;
+    test_t *t;
+    mln_list_t sentinel = mln_list_null();
+
+    for (i = 0; i < 3; ++i) {
+        t = (test_t *)calloc(1, sizeof(*t));
+        if (t == NULL)
+            return -1;
+        mln_list_add(&sentinel, &t->node);
+        t->val = i;
+    }
+    for (t = mln_container_of(mln_list_head(&sentinel), test_t, node); \
+         t != NULL; \
+         t = mln_container_of(mln_list_next(&t->node), test_t, node))
+    {
+        printf("%d\n", t->val);
+    }
+    return 0;
+}
+```
+
+Here, `mln_container_of` defined in `mln_defs.h` is used to obtain the pointer of the custom structure `test_t` to which the link point belongs.
