@@ -1,3 +1,9 @@
+Changes with melon 2.6.3                                          17 Jan 2023
+    *) Updated trace module
+    *) Updated Dockerfile
+    *) Update red-black tree module
+    *) Added doubly linked list
+
 Changes with melon 2.6.2                                          30 Dec 2022
     *) Updated naming convention for functions in event module
     *) Fixed error in configuration module
